# GMSP

./: .gitignore  BlenderLLM2.ipynb  CLAUDE.md  README.md  README.md.codex.bak  client.py  experiment_tracking.py  gmsp_config.json  gmsp_config.local.example.json  gmsp_config.py  gsmp_config.json  gsmp_config.local.example.json  gsmp_config.py  pyproject.toml  requirements.txt  rl_training.py  server.py
configs/: default.json  default.json.codex.bak  default.json.codexsync.20260401215203.bak  local.example.json
data/: README.md
docs/: aliyun_relay_quickstart.md  aliyun_relay_setup.md  how_it_works.md  model_setup.md  research_artifacts.md  workspace_layout.md
notebooks/: blender_llm_2.ipynb  blender_llm_copy.ipynb  gemma3_1b.ipynb  glsl_maker_gemma3_1b.ipynb  glsl_maker_new.ipynb  glsl_maker_old.ipynb  gmsp_main.ipynb  grpo_classic.ipynb
scripts/: _bootstrap.py  check_cuda.py  glsl_runner.py  manual_runner.py  relay_server.py  send_glsl.py  send_material.py  setup_model_sources.py  test_network.py  test_relay.py
src/gmsp/: __init__.py  config.py
src/gmsp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gmsp/clients/: __init__.py  blender_client.py  websocket_client.py
src/gmsp/tracking/: __init__.py  experiment_tracking.py
src/gmsp/training/: __init__.py  rl_training.py.codex.bak  rl_training.py.codex.sync.bak  rl_training.py.codexsync.20260401215203.bak
tests/: test_rl_training.py
